# llm-memory

./: .gitignore  FRAMEWORK_UPDATES.md  PROJECT_MEMORY.md  README.md  README_PYDANTICAI.md  SUMMARIZATION_GUIDE.md  activate.ps1  audit.py  chat_api.py  chat_api_v2.py  financial_demo.py  financial_demo_audit.db  graph.py  main.py  manual_test.py  nodes.py  policy.py  pydantic_ai_demo.py  pyproject.toml  requirements_v2.txt  setup_and_run.ps1  simple_audit.py  simple_chat_api.py  simple_demo.py  simple_graph.py  simple_nodes.py  simple_policy.py  simple_state.py  simple_test.py  state.py  test_audit.db  test_audit_runtime.db  test_chat_audit.db  test_financial_audit.db  test_memory_system.py  test_pydantic_system.py  test_simple.py
agent/: __init__.py  agent.py  prompts.py  tools.py
api/: __init__.py  chat_api.py
app/api/: server.py
app/financial/: financial_state.py
app/service/: chat.py
demos/: README.md  comparison.py  simple_memory.py
docs/: BEFORE_AFTER_COMPARISON.md  CLEANUP_COMPLETED.md  CLEANUP_PLAN.md  COMPLETION_SUMMARY.md  MEMORY_TYPES_GUIDE.md  PROJECT_MEMORY.md  PROJECT_REORGANIZATION.md  PYDANTIC_AI_MIGRATION.md  QUICKSTART_PYDANTICAI.md  README.md  README_OLD.md  README_PYDANTICAI.md  README_v2.md  SETUP.md  START_HERE.md
framework/: audit.py  graph.py  nodes.py  policy.py  state.py  summarization.py
infra/: __init__.py  config.py  embedding.py  snapshot.py
legacy/: README.md  graph.py  manual_test.py  memory_system.py  memory_types_demo.py  summarization_demo.py
legacy/app/api/: server.py
legacy/app/financial/: financial_nodes.py
legacy/framework/: pydantic_agent.py
legacy/tests/: test_framework.py
memory/: __init__.py  manager.py  models.py  summarizer.py  vector_store.py
tests/: test_api.py  test_framework.py
