[project]
name = "llm-memory"
version = "0.1.0"
description = "Simple LLM Memory System for Completion Chat API with deterministic results"
readme = "README.md"
requires-python = ">=3.8.1"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0"
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
