[project]
name = "llm-memory"
version = "0.1.0"
description = "Simple LLM Memory System for Completion Chat API with deterministic results"
readme = "README.md"
requires-python = ">=3.8.1"
dependencies = [
    "pydantic>=2.5.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.23.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0"
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
py-modules = []
