[project]
name = "llm-memory"
version = "0.2.0"
description = "Simple LLM Memory System for Completion Chat API with deterministic results (PydanticAI-powered)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-ai>=1.39.0",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0"
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
py-modules = []
